prototype 2 de cv terminé

--- a/cv2.html
+++ b/cv2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="cv.css">
+    <link rel="stylesheet" type="text/css" href="cv2.css">
     <title>Curriculum Vitae</title>
 </head>
 <body>
@@ -12,29 +12,6 @@
         <img src="photo.png"><h1>Sébastien Parmentier</h1>
     </header>
     <section id="contact-left">
-        <section class="contact-inline">
-            <h5>Adresse</h5> 
-        </section>
-        <section class="contact-inline">
-            <h5>Téléphone</h5> 
-            <p>+32493066451</p>
-        </section>
-        <section class="contact-inline">
-            <h5>E-mail</h5> 
-            <p>
-                <a href="sebastien.parmentier@mail.com">sebastien.parmentier@mail.com</a>
-            </p>
-        </section>
-        <section class="contact-inline">
-            <h5>Nationalité</h5> 
-            <p>Belge</p>
-        </section>
-        <section class="contact-inline">
-            <h5>Date de naissance</h5> 
-            <p>23 Mars 1989</p>
-        </section>
-    </section>
-    <section id="contact-right">
         <section class="contact-inline">
             <h5>Adresse</h5> 
             <p>48 Rue de la Fabrique, Moustier sur Sambre</p>
@@ -65,7 +42,7 @@
         <section class="formation-block">
             <header>
                 <h3>Bachelier en Sciences Mathématiques</h3>
-                <p class="annee">2007-2010</p>
+                <p class="annee">2007 - 2010</p>
                 <p class="lieu">Université Catholique de Louvain, Louvain-la-Neuve</p>
             </header>    
             <section class="detail-inline">
@@ -84,7 +61,7 @@
         <section class="formation-block">
             <header>
                 <h3>Master en Sciences Mathématiques</h3>
-                <p class="annee">2010-2012</p>
+                <p class="annee">2010 - 2012</p>
                 <p class="lieu">Université Catholique de Louvain, Louvain-la-Neuve</p>
             </header>    
             <section class="detail-inline">
@@ -107,11 +84,11 @@
                 <p class="lieu">Université Catholique de Louvain, Louvain-la-Neuve</p>
             </header>    
         </section>
-        <section class="formation-block">
+        <section class="formation-block" class="formation-becode">
             <header>
-                <h3>Formation Becode</h3>
+                <h3>Formation en développement Becode</h3>
                 <p class="annee">2019 - 2019</p>
-                <p class="lieu">Quai 10 Charleroi</p>
+                <p class="lieu">Quai Arthur Rimbaud 10, "Quai 10" Charleroi </p>
             </header>    
             <section class="detail-inline">
                 <h5></h5> 
